--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.16.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
