--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-icons": "^1.4.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ngx-pagination": "^5.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.0",
