--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.7",
+    "@angular/animations": "^11.2.14",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
@@ -29,6 +29,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ngx-pagination": "^5.1.0",
+    "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.0",
